<resources>
    <string name="app_name">BD TUTORIAL Zone</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_history">History</string>
    <string name="deleteHistory">Delete History</string>
    <string name="mode1">Degree</string>
    <string name="mode2">Radian</string>
    <string name="toggle">SWITCH</string>
    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="tan">tan</string>
    <string name="naturalLog">ln</string>
    <string name="hyperbolicSine">sinh</string>
    <string name="hyperbolicCosine">cosh</string>
    <string name="hyperbolicTan">tanh</string>
    <string name="log">log</string>
    <string name="Mod">%</string>
    <string name="inverse">1/x</string>
    <string name="factorial">x!</string>>

    <string name="action_settings">Settings</string>
    <string name="stdCal">Standard Calculator</string>
    <string name="sciCal">Scientific Calculator</string>
    <string name="unitCal">Unit Converter</string>
    <string name="FullCal">Calculator App</string>
    <string name="title_activity_standard_cal">StandardCal</string>
    <string name="title_activity_scientific_cal">ScientificCal</string>
    <string name="title_activity_unit_coverter">UnitCoverter</string>
    <string name="clear">C</string>
    <string name="backspace">⌫</string>
    <string name="divide">÷</string>
    <string name="sqrt">√</string>
    <string name="cuberoot">\u221B</string>
    <string name="square">x²</string>
    <string name="cube">x\u00B3</string>
    <string name="tenpow">10\u207F</string>
    <string name="sininv">sin\u207B\u00B9</string>
    <string name="cosinv">cos\u207B\u00B9</string>
    <string name="taninv">tan\u207B\u00B9</string>
    <string name="posneg">±</string>
    <string name="arrow">↑</string>
    <string name="xpown">xⁿ</string>
    <string name="epown">eⁿ</string>
    <string name="pi">π</string>
    <string name="title_activity_unit_area">UnitArea</string>
    <string name="title_activity_unit_length">UnitLength</string>
    <string name="title_activity_unit_weight">UnitWeight</string>
    <string name="title_activity_unit_temperature">UnitTemperature</string>
    <string name="openBracket">(</string>
    <string name="closeBracket">)</string>
    <string name="history">History</string>
    <string name="calculator">calculator</string>
    <string name="scientific_calculator">Scientific Calculator</string>
    <string name="unit_converter">UNIT CONVERTER</string>

    <string-array name="area">
        <item>Sq. Millimeter</item>
        <item>Sq. Centimeter</item>
        <item>Sq Meter</item>
        <item>Sq. Kilometer</item>
        <item>Acre</item>
        <item>Hectare</item>
    </string-array>

    <string-array name="length">
        <item>Nanometer</item>
        <item>Millimeter</item>
        <item>Centimeter</item>
        <item>Meter</item>
        <item>Kilometer</item>
        <item>Inches</item>
        <item>Foot</item>
        <item>Yards</item>
        <item>Mile</item>
    </string-array>

    <string-array name="temperature">
        <item>Celsius</item>
        <item>Farenheit</item>
        <item>Kelvin</item>
    </string-array>
    <string-array name="weight">
        <item>Milligrams</item>
        <item>Centigrams</item>
        <item>Decigrams</item>
        <item>Grams</item>
        <item>Kilograms</item>
        <item>Metric tonnes</item>
        <item>Pounds</item>
        <item>Ounces</item>
    </string-array>
</resources>
