<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@drawable/bg_cover"
    tools:context="com.example.it_irine.bdtutorialzone.LoginActivity">

    <!-- Login progress -->


    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_marginTop="60dp"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/bdtutorial"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="BD TUTORIAL "
                android:textStyle="italic"
                android:textColor="#FFFFFF"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                android:textSize="@dimen/activity_horizontal_margin"/>
            <ProgressBar
                android:id="@+id/login_progress"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:visibility="gone" />
            <android.support.design.widget.TextInputLayout
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:background="@drawable/background"
                android:layout_height="50dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                >

                <AutoCompleteTextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:textColor="#ffff"
                    android:drawablePadding="8dp"
                    android:drawableLeft="@drawable/ic_email_white_18dp"
                    android:textColorHint="#ffff"
                    android:background="@android:color/transparent"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/background"
                android:layout_height="50dp">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:drawablePadding="8dp"
                    android:hint="@string/prompt_password"
                    android:drawableLeft="@drawable/ic_lock_white_18dp"
                    android:textColor="#ffff"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:backgroundTint="@android:color/transparent"
                    android:imeOptions="actionUnspecified"
                    android:inputType="numberPassword|textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/email_sign_in_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/btn_bg"
                android:text="@string/action_sign_in"
                android:textColor="#00A1AE"
                />

        </LinearLayout>

    </ScrollView>
</LinearLayout>
