<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context="com.example.it_irine.bdtutorialzone.FragmentDecisionMaking">
    <!--<android.support.design.widget.AppBarLayout-->
        <!--android:id="@+id/appbar"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="50dp">-->
        <!--<android.support.v7.widget.Toolbar-->
            <!--android:id="@+id/toolbar"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="match_parent">-->
            <!--<LinearLayout-->
                <!--android:gravity="center_vertical"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:orientation="horizontal"-->
                <!--android:layout_height="wrap_content">-->
                <!--<ImageView-->
                    <!--android:src="@drawable/bdtutorial"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content" />-->
            <!--<TextView-->
                <!--android:layout_marginLeft="16dp"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:textColor="@color/colorWhite"-->
                <!--android:text="BD TUTORIAL ZONE"/>-->
            <!--</LinearLayout>-->
        <!--</android.support.v7.widget.Toolbar>-->
    <!--</android.support.design.widget.AppBarLayout>-->
    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:layout_below="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Button
            android:id="@+id/calculator"
            android:background="@drawable/card_baclground"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:onClick="onClick"
            android:textColor="@color/colorWhite"
            android:text="@string/calculator"
            />

        <Button
            android:id="@+id/scientific"
            android:background="@drawable/card_baclground"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:onClick="onClick"
            android:textColor="@color/colorWhite"
            android:text="@string/scientific_calculator"
            />
        <Button
            android:id="@+id/digitConverter"
            android:background="@drawable/card_baclground"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:onClick="onClick"
            android:textColor="@color/colorWhite"
            android:text="@string/unit_converter"
            />
    </LinearLayout>

</RelativeLayout>
